games links attached

--- a/index.html
+++ b/index.html
@@ -100,14 +100,22 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/GravityManipulationPuzzle.png" alt="" ></a>
-								<h3><a href="#">GravityManipulationPuzzle</a></h3>
+								<h3>
+									<a href="https://shanmuga-velayutham.itch.io/gravity-manipulation-puzzle">
+										GravityManipulationPuzzle
+									</a>
+								</h3>
 								<p>3D Game using Unity</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/GravityGlitch.png" alt="" ></a>
-								<h3><a href="#">GravityGlitch</a></h3>
+								<h3>
+									<a href="https://play.google.com/store/apps/details?id=com.Parentsfoot.GravityGlitch">
+										GravityGlitch
+									</a>
+								</h3>
 								<p>2D Game using Unity</p>
 							</article>
 						</div>
@@ -128,7 +136,11 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="" alt="" ></a>
-								<h3><a href="#">TicTacTeo</a></h3>
+								<h3>
+									<a href="https://simmer.io/@sanju/tic-tac-teo">
+										TicTacTeo
+									</a>
+								</h3>
 								<p>Webgl Game</p>
 							</article>
 						</div>
