minimized the webpage

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 		<!-- Nav -->
 			<nav id="nav">
 				<ul class="container">
-					<li><a href="#top">Top</a></li>
-					<li><a href="#work">Work</a></li>
-					<li><a href="#portfolio">Portfolio</a></li>
-					<li><a href="#contact">Contact</a></li>
+					<li><a href="#top">About</a></li>
+					<li><a href="#work">Achivements</a></li>
+					<li><a href="#portfolio">Works</a></li>
+					<li><a href="#Certifications">Certifications</a></li>
 				</ul>
 			</nav>
 
@@ -38,7 +38,9 @@
 								I am eager to take on an internship opportunity to further develop my skills. 
 								I am seeking a remote position with flexible working hours, allowing me to dedicate 
 								my best efforts towards the company's projects while enhancing my abilities in a
-								 collaborative online environment."</p>
+								collaborative online environment."
+                                <br>
+								<a href="mailto:shanmugavel1223@gmail.com">Message through mail</a></p>
 							<a href="#work" class="button large scrolly">Learn about what I do</a>
 						</div>
 					</div>
@@ -50,17 +52,18 @@
 				<div class="container">
 					<header>
 						<h2>Here's all the stuff I do.</h2>
-						<p>projects</p>
+						<p>Achivements</p>
 					</header>
 					<div class="row aln-center">
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
-								<span class="icon featured fa-comments"></span>
-								<h3>Consequat lorem</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+							<!--<span class="icon featured fa-comments"></span>-->
+							<img class="image featured" src="images/GravityGlitchLogo.png">
+								<h3>publication</h3>
+								<p>Successfully published a game in google playstore and reached 50+ downloads</p>
 							</section>
 						</div>
-						<div class="col-4 col-6-medium col-12-small">
+					<!--	<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class="icon solid featured fa-camera-retro"></span>
 								<h3>Lorem dolor tempus</h3>
@@ -73,10 +76,10 @@
 								<h3>Feugiat posuere</h3>
 								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
 							</section>
-						</div>
+						</div> -->
 					</div>
 					<footer>
-						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
+					<!--	<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>-->
 						<a href="#portfolio" class="button large scrolly">See some of my recent work</a>
 					</footer>
 				</div>
@@ -88,18 +91,21 @@
 					<header>
 						<h2>Here’s some stuff I made recently.</h2>
 						<p>Work experience</p>
+						<p>Click the images to view the gameplay video of the work</p>
 					</header>
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/torch.png" alt="" /></a>
-								<h3><a href="#">Torch</a></h3>
+								<div class="image featured">
+								<img src="images/torch.png"alt=""/>
+								<h3>Torch</a></h3>
 								<p>3D Model using Blender</p>
+							</div>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/GravityManipulationPuzzle.png" alt="" ></a>
+								<a href="https://youtu.be/9UEXVTINJlU" class="image featured"><img src="images/GravityManipulationPuzzle.png" alt="" ></a>
 								<h3>
 									<a href="https://shanmuga-velayutham.itch.io/gravity-manipulation-puzzle">
 										GravityManipulationPuzzle
@@ -110,13 +116,24 @@
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/GravityGlitch.png" alt="" ></a>
+								<a href="https://youtu.be/RvHIIYql3wI" class="image featured"><img src="images/GravityGlitch.png" alt="" ></a>
 								<h3>
 									<a href="https://play.google.com/store/apps/details?id=com.Parentsfoot.GravityGlitch">
 										GravityGlitch
 									</a>
 								</h3>
 								<p>2D Game using Unity</p>
+							</article>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<article class="box style2">
+								<a href="https://youtu.be/R_fSJHDeEak" class="image featured"><img src="images/TicTacTeo.png " alt="" ></a>
+								<h3>
+									<a href="https://simmer.io/@sanju/tic-tac-teo">
+										TicTacTeo
+									</a>
+								</h3>
+								<p>Webgl Game</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
@@ -136,97 +153,94 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="" alt="" ></a>
-								<h3>
-									<a href="https://simmer.io/@sanju/tic-tac-teo">
-										TicTacTeo
-									</a>
-								</h3>
-								<p>Webgl Game</p>
-							</article>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="#" class="image featured"><img src="" alt="" ></a>
 								<h3><a href="#">Weather Application</a></h3>
 								<p>Web Application</p>
 							</article>
 						</div>
 				    </div>
 				</div>
+				<footer>
+					<!--	<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>-->
+						<a href="#Certifications" class="button large scrolly">See some of my Certifications</a>
+					</footer>
 				<!--Certifications-->
 				<br>
 				<br>
-				<div class="container">
-					<header>
-						<h2>Here’s some Certifications of mine.</h2>
-						<p>Certifications</p>
-					</header>
-					<div class="row">
-					    <div class="col-4 col-6-medium col-12-small">
-						    <article class="box style2">
-							<a href="#" class="image featured"><img src="Certifications/others/CISCO.jpeg" alt="" ></a>
-							<h3><a href="#">Networking with Cisco routers</a></h3>
-							<p>Avatar Academy</p>
-							</article>
+				<article id="Certifications" class="wrapper style3">
+					<div class="container">
+						<header>
+							<h2>Here’s some Certifications of mine.</h2>
+							<p>Certifications</p>
+						</header>
+						<div class="row">
+							<div class="col-4 col-6-medium col-12-small">
+								<article class="box style2">
+								<a href="#" class="image featured"><img src="Certifications/others/CISCO.jpeg" alt="" ></a>
+								<h3><a href="#">Networking with Cisco routers</a></h3>
+								<p>Avatar Academy</p>
+								</article>
+							</div>
+							<div class="col-4 col-6-medium col-12-small">
+								<article class="box style2">
+									<a href="#" class="image featured"><img src="Certifications/others/AR.jpeg" alt="" ></a>
+									<h3><a href="#">AR AND VR</a></h3>
+									<p>Accent Techno soft</p>
+								</article>
+							</div>
+							<div class="col-4 col-6-medium col-12-small">
+								<article class="box style2">
+									<a href="#" class="image featured">
+										<img src="Certifications/naan mudhalvan/networking/SHANMUGAB-7240_DHAANISH AH-certificate_page-0001.jpg" alt="" />
+									</a>
+									<h3><a href="#">CCNAv7</a></h3>
+									<p>Cisco Networking Academy</p>
+								</article>
+							</div>
+							<div class="col-4 col-6-medium col-12-small">
+								<article class="box style2">
+									<a href="#" class="image featured">
+										<img src="Certifications/HackerRank/python_basic certificate_page-0001.jpg" alt="" />
+									</a>
+									<h3><a href="#">Python</a></h3>
+									<p>HackerRank</p>
+								</article>
+							</div>
+							<div class="col-4 col-6-medium col-12-small">
+								<article class="box style2">
+									<a href="#" class="image featured"><img src="Certifications/SkillLync/jdw7mbezsr.jpg" alt="" /></a>
+									<h3><a href="#">Fullstack development</a></h3>
+									<p>Skill Lync</p>
+								</article>
+							</div>
+							<div class="col-4 col-6-medium col-12-small">
+								<article class="box style2">
+									<a href="#" class="image featured">
+										<img src="Certifications/naan mudhalvan/cloudEssential/WhatsApp Image 2023-07-20 at 8.21.56 AM.jpeg" alt="" />
+									</a>
+									<h3><a href="#">Cloud Essential</a></h3>
+									<p>Veranda</p>
+								</article>
+							</div>
 						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="#" class="image featured"><img src="Certifications/others/AR.jpeg" alt="" ></a>
-								<h3><a href="#">AR AND VR</a></h3>
-								<p>Accent Techno soft</p>
-							</article>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="#" class="image featured">
-									<img src="Certifications/naan mudhalvan/networking/SHANMUGAB-7240_DHAANISH AH-certificate_page-0001.jpg" alt="" />
-								</a>
-								<h3><a href="#">CCNAv7</a></h3>
-								<p>Cisco Networking Academy</p>
-							</article>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="#" class="image featured">
-									<img src="Certifications/HackerRank/python_basic certificate_page-0001.jpg" alt="" />
-								</a>
-								<h3><a href="#">Python</a></h3>
-								<p>HackerRank</p>
-							</article>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="#" class="image featured"><img src="Certifications/SkillLync/jdw7mbezsr.jpg" alt="" /></a>
-								<h3><a href="#">Fullstack development</a></h3>
-								<p>Skill Lync</p>
-							</article>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="#" class="image featured">
-									<img src="Certifications/naan mudhalvan/cloudEssential/WhatsApp Image 2023-07-20 at 8.21.56 AM.jpeg" alt="" />
-								</a>
-								<h3><a href="#">Cloud Essential</a></h3>
-								<p>Veranda</p>
-							</article>
-						</div>
-					</div>
+				</article>
+			
 					<footer>
-						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
+					<!--<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>-->
 						<a href="#contact" class="button large scrolly">Get in touch with me</a>
 					</footer>
+					</div>
 				</div>
 			</article>
 
 		<!-- Contact -->
 			<article id="contact" class="wrapper style4">
-				<div class="container medium">
+				<!--<div class="container medium">
 					<header>
 						<h2>Have me make stuff for you.</h2>
 						<p>Contact Detials</p>
-					</header>
+					</header>-->
 					<div class="row">
-						<div class="col-12">
+					<!--	<div class="col-12">
 							<form method="post" action="#">
 								<div class="row">
 									<div class="col-6 col-12-small">
@@ -249,7 +263,7 @@
 									</div>
 								</div>
 							</form>
-						</div>
+						</div>-->
 						<div class="col-12">
 							<hr />
 							<h3>Find me on ...</h3>
