logo size modified

--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 							<!--<span class="icon featured fa-comments"></span>-->
-							<img class="image featured" src="images/GravityGlitchLogo.png">
+							<div class="image featured">
+								<img src="images/GravityGlitchLogo.png">
+							</div>
 								<h3>publication</h3>
 								<p>Successfully published a game in google playstore and reached 50+ downloads</p>
 							</section>
