text align in torch

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 							<div class="image featured">
 								<img src="images/GravityGlitchLogo.png">
 							</div>
-								<h3>publication</h3>
+								<h3>Publication</h3>
 								<p>Successfully published a game in google playstore and reached 50+ downloads</p>
 							</section>
 						</div>
@@ -99,15 +99,17 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<div class="image featured">
-								<img src="images/torch.png"alt=""/>
+								    <img src="images/torch.png"alt=""/>
+								</div>
 								<h3>Torch</a></h3>
 								<p>3D Model using Blender</p>
-							</div>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://youtu.be/9UEXVTINJlU" class="image featured"><img src="images/GravityManipulationPuzzle.png" alt="" ></a>
+								<a href="https://youtu.be/9UEXVTINJlU" class="image featured">
+									<img src="images/GravityManipulationPuzzle.png" alt="" >
+								</a>
 								<h3>
 									<a href="https://shanmuga-velayutham.itch.io/gravity-manipulation-puzzle">
 										GravityManipulationPuzzle
