awards_sec & dev_link

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 					<li><a href="#work">Achivements</a></li>
 					<li><a href="#portfolio">Works</a></li>
 					<li><a href="#Certifications">Certifications</a></li>
+					<li><a href="#Awards">Awards</a></li>
 				</ul>
 			</nav>
 
@@ -63,6 +64,7 @@
 							</div>
 								<h3>Publication</h3>
 								<p>Successfully published a game in google playstore and reached 50+ downloads</p>
+							    <a href="https://play.google.com/store/apps/dev?id=6833126022800867460">Developer Page</a>
 							</section>
 						</div>
 					<!--	<div class="col-4 col-6-medium col-12-small">
@@ -99,7 +101,7 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<div class="image featured">
-								    <img src="images/torch.png"alt=""/>
+								    <img src="images/3DModelImages/torch.png"alt=""/>
 								</div>
 								<h3>Torch</a></h3>
 								<p>3D Model using Blender</p>
@@ -131,7 +133,9 @@
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://youtu.be/R_fSJHDeEak" class="image featured"><img src="images/TicTacTeo.png " alt="" ></a>
+								<a href="https://youtu.be/R_fSJHDeEak" class="image featured">
+									<img src="images/TicTacTeo.png " alt="" >
+								</a>
 								<h3>
 									<a href="https://simmer.io/@sanju/tic-tac-teo">
 										TicTacTeo
@@ -149,8 +153,8 @@
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="" alt="" ></a>
-								<h3><a href="#">Collage Miniproject</a></h3>
+								<a href="#" class="image featured"><img src="images/miniproject.png" alt="" ></a>
+								<h3><a href="#">College Miniproject</a></h3>
 								<p>AR Application</p>
 							</article>
 						</div>
@@ -179,7 +183,9 @@
 						<div class="row">
 							<div class="col-4 col-6-medium col-12-small">
 								<article class="box style2">
-								<a href="#" class="image featured"><img src="Certifications/others/CISCO.jpeg" alt="" ></a>
+								<a href="#" class="image featured">
+									<img src="Certifications/others/CISCO.jpeg" alt="" >
+								</a>
 								<h3><a href="#">Networking with Cisco routers</a></h3>
 								<p>Avatar Academy</p>
 								</article>
@@ -225,8 +231,49 @@
 									<p>Veranda</p>
 								</article>
 							</div>
+							<div class="col-4 col-6-medium col-12-small">
+								<article class="box style2">
+									<a href="#" class="image featured">
+										<img src="Certifications/Udemy/VirtualAssistant_with_Chatgpt_using _python.jpg" alt="" />
+									</a>
+									<h3><a href="#">Virtual Assistant with python and chatGPT</a></h3>
+									<p>Udemy</p>
+								</article>
+							</div>
 						</div>
 				</article>
+				    <footer>
+					<!--<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>-->
+						<a href="#Awards" class="button large scrolly">See my Awards</a>
+					</footer>
+            <!--Honors and Awards-->>
+				<article id="Awards" class="wrapper style3">
+					<div class="container">
+						<header>
+							<h2>Here’s some Awards I got .</h2>
+							<p>Honors and Awards</p>
+						</header>
+						<div class="row">
+							<div class="col-4 col-6-medium col-12-small">
+								<article class="box style2">
+								<a href="#" class="image featured">
+									<img src="ChildHoodAwards/DrawingShield.jpg" alt="" >
+								</a>
+								<h3><a href="#">Drawing compation</a></h3>
+								<p>I got 1st price in a drawing competition which is contected in my school</p>
+								</article>
+							</div>
+							<div class="col-4 col-6-medium col-12-small">
+								<article class="box style2">
+								<a href="#" class="image featured">
+									<img src="ChildHoodAwards/NCCCampCertificate.jpg" alt="" >
+								</a>
+								<h3><a href="#">NCC Camp Certificate </a></h3>
+								<p>In my schooling I am one of the cadet in national cadet corps</p>
+								</article>
+							</div>
+						</div>
+			    </article>
 			
 					<footer>
 					<!--<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>-->
