--- a/index.html
+++ b/index.html
@@ -246,7 +246,9 @@
 					<!--<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>-->
 						<a href="#Awards" class="button large scrolly">See my Awards</a>
 					</footer>
-            <!--Honors and Awards-->>
+					<br>
+					<br>
+            <!--Honors and Awards-->
 				<article id="Awards" class="wrapper style3">
 					<div class="container">
 						<header>
