--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 				<ul class="container">
 					<li><a href="#top">About</a></li>
 					<li><a href="#work">Achivements</a></li>
+					<li><a href="#experience">Experience</a></li>
 					<li><a href="#portfolio">Works</a></li>
 					<li><a href="#Certifications">Certifications</a></li>
 					<li><a href="#Awards">Awards</a></li>
@@ -67,34 +68,44 @@
 							    <a href="https://play.google.com/store/apps/dev?id=6833126022800867460">Developer Page</a>
 							</section>
 						</div>
-					<!--	<div class="col-4 col-6-medium col-12-small">
-							<section class="box style1">
-								<span class="icon solid featured fa-camera-retro"></span>
-								<h3>Lorem dolor tempus</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
-							</section>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<section class="box style1">
-								<span class="icon featured fa-thumbs-up"></span>
-								<h3>Feugiat posuere</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
-							</section>
-						</div> -->
 					</div>
 					<footer>
 					<!--	<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>-->
-						<a href="#portfolio" class="button large scrolly">See some of my recent work</a>
+						<a href="#experience" class="button large scrolly">See some of my experience</a>
 					</footer>
 				</div>
 			</article>
+		<!--Experience-->
+		<article id="experience" class="wrapper style2">
+			<div class="container">
+				<header>
+					<h2>Here's all the stuff I does.</h2>
+					<p>Experience</p>
+				</header>
+				<div class="row aln-center">
+					<div class="col-4 col-6-medium col-12-small">
+						<section class="box style2">
+						<div class="image featured">
+							<img src="Certifications/intership/Bowled.io Internship Certificate.jpg">
+						</div>
+							<h3>Game Tester intern</h3>
+							<p>bowled.io</p>
+						</section>
+					</div>
+				</div>
+				<footer>
+				<!--	<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>-->
+					<a href="#portfolio" class="button large scrolly">See some of my recent work</a>
+				</footer>
+			</div>
+		</article>
 
 		<!-- Portfolio -->
 			<article id="portfolio" class="wrapper style3">
 				<div class="container">
 					<header>
 						<h2>Here’s some stuff I made recently.</h2>
-						<p>Work experience</p>
+						<p>Work</p>
 						<p>Click the images to view the gameplay video of the work</p>
 					</header>
 					<div class="row">
