--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 				<div class="container">
 					<header>
 						<h2>Here’s some stuff I made recently.</h2>
-						<p>Work</p>
+						<p>Works</p>
 						<p>Click the images to view the gameplay video of the work</p>
 					</header>
 					<div class="row">
@@ -192,6 +192,15 @@
 							<p>Certifications</p>
 						</header>
 						<div class="row">
+							<div class="col-4 col-6-medium col-12-small">
+								<article class="box style2">
+								<a href="#" class="image featured">
+									<img src="Certifications/Udemy/Unity-tutorial-from-scratch-till-infinity.jpg" alt="" >
+								</a>
+								<h3><a href="#">Unity tutorial from scratch till infinity</a></h3>
+								<p>Udemy</p>
+								</article>
+							</div>
 							<div class="col-4 col-6-medium col-12-small">
 								<article class="box style2">
 								<a href="#" class="image featured">
